--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ p {
     background-color: #C9ACA7;
     width: 100%;
     display: flex;
+    position: relative;
 }
 
 .logo-wrapper {
@@ -45,16 +46,16 @@ p {
 .logo-mobile {
     width: 60%;
     /* Center the logo horizontally and vertically in the header */
-    margin: 20px 0 20px 25.56%;
+    margin: 20px 0 20px 30.625%;
 }
 
 .logo-wrapper-mobile {
-    flex-basis: 90%;
+    flex-basis: 85%;
 }
 
-.nav {
-    flex-basis: 10%;
-}
+/* .navbar-toggler {
+    flex-basis: 15%;
+} */
 
 .banner {
     position: relative;
@@ -110,14 +111,11 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
     display: none;
     position: absolute;
 
-    top: 200px;
-    /* As Javascript is not allowed in this assignment, the dynamic height of the logo-nav wrapper as well as the dynamic value of the 'top' cannot be calculated. Therefore, the nav menu displayed when the hamburger menu is clicked cannot stick to the bottom of the header properly. */
-
+    top: 100%;
     left: 0;
     width: 100%;
     padding: 50px 0 40px 0;
     background-color: #fff;
-    /* padding: 0; */
     margin: 0;
     list-style: none;
     text-align: center;
@@ -135,7 +133,20 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
     padding: 10px;
     color: #4D2C6D;
     text-decoration: none;
+    transition: all 0.3s ease-in-out;
 }
+
+#current-page {
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}
+
+.nav-ul .nav-li a:active {
+    font-size: 20px;
+}
+
+
+
 
 /* ----------Skip Links------------- */
 .skip-links-section {
@@ -150,6 +161,7 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
     text-decoration: none;
     color: #5F2B22;
     font-weight: bold;
+    transition: all 0.3s ease-in-out;
 }
 
 
@@ -158,12 +170,15 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
    -------------------------------------- */
 
 /* ----------Home Header------------- */
+.banner {
+    background-color: #C9ACA7;
+}
 .banner-img {
     width: 100%;
     position: relative;
     top: 0;
     left: 0;
-    z-index: 0
+    z-index: 0;
 }
 
 .slider-dots {
@@ -209,33 +224,39 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
 .menu-wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5% 5%;
-    padding: 0 8% 100px 8%;
+    gap: 18px 18px;
+    padding: 0 5% 40px 5%;
 }
 
-.menu-wrapper .menu-item .name-price-wrapper {
-    display: grid;
-    grid-template-columns: 75% 25%;
-    padding: 3px 0 3px 0;
+
+
+.menu-item {
+    background-color: rgb(77, 44, 109, .1);
 }
 
-.menu-wrapper .menu-item .name-price-wrapper .item-price {
-    text-align: right;
+.menu-item .name-price-wrapper .item-name {
+    height: 60px;
 }
 
-.menu-wrapper .menu-item .name-price-wrapper div {
-    height: auto;
+.menu-item .name-price-wrapper {
+    padding: 5px 15px 5px 15px;
 }
 
 .menu-text {
-    font-size: 15px;
+    font-size: 18px;
 }
 
 /* Menu 'View' buttons */
 .menu-item button {
     width: 100%;
+    height: 2em;
     background-color: #4D2C6D;
     color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+
+.menu-item button:active {
+    opacity: 85%;
 }
 
 
@@ -247,30 +268,19 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
     margin: 0 auto;
     background-color: #4D2C6D;
     color: #fff;
-    padding: 5px 30px 5px 30px;
+    padding: 5px 30px;
+    transition: all 0.3s ease-in-out;
+}
+
+.menu .main-menu-button-wrapper .main-menu-button:active {
+    opacity: 85%;
 }
 
 /* ----------Art of Coffee Section------------- */
-.latte-art-img-wrapper img {
-    width: 100%;
-}
 
-.art-of-coffee .latte-art-img-wrapper .img-one,
-.art-of-coffee .latte-art-img-wrapper .img-three {
-    display: none;
-}
-
-.latte-art-img-wrapper {
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: 16% 68% 16%;
-    align-items: center;
-}
-
-.latte-art-img-wrapper .arrow {
+.latte-art-img {
     text-align: center;
-    font-size: 60px;
-    color: #4D2C6D;
+    margin-top: 30px;
 }
 
 .lorem {
@@ -300,47 +310,34 @@ input[type="checkbox"]:checked~label span:nth-of-type(3) {
 .coffee-beans .coffee-beans-card .beans-two {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 5% 5%;
-    padding: 30px 8% 100px 8%;
+    margin: 30px 8% 0 8%;
+    background-color: rgb(77, 44, 109, .1);
 }
 
 .coffee-beans-card .menu-item .name-price-wrapper {
     display: grid;
     grid-template-columns: 75% 25%;
-    padding: 3px 0 3px 0;
+    padding: 5% 15px;
 }
 
 .coffee-beans-card .menu-item .name-price-wrapper .item-price {
     text-align: right;
 }
 
-.mcoffee-beans-card .menu-item .name-price-wrapper div {
-    height: auto;
-}
-
-.menu-text {
-    font-size: 15px;
-}
-
-/* Coffee Beans 'View' buttons */
-.menu-item button {
-    width: 100%;
-    background-color: #4D2C6D;
-    color: #fff;
-}
 
 
 /* ----------Footer Section------------- */
 footer {
     background-color: #C9ACA7;
     padding-bottom: 15px;
+    margin-top: 100px;
 }
 
 .footer-menu {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     font-family: 'Source Sans Pro', sans-serif;
-    color: #fff;
+    color: #000;
 }
 
 .footer-menu .footer-first-section {
@@ -355,14 +352,20 @@ footer {
     padding: 5px 0 15px 0;
 }
 
+
+.footer-menu li {
+    font-size: 17px;
+}
 .footer-menu .footer-menu-header {
     font-size: 20px;
     margin-bottom: 20px;
+    text-decoration: underline;
+    text-underline-offset: 4px;
 }
 
 .footer-menu .footer-menu-header a {
     text-decoration: none;
-    color: #fff;
+    color: #000;
 }
 
 .footer-menu li {
@@ -370,13 +373,17 @@ footer {
 }
 
 /* Social Media Icons */
-.footer-menu .ig-icon {
+.social-icons {
+    color: #4D2C6D;
     font-size: 35px;
+    margin-top: 20px;
+}
+
+.footer-menu .ig-icon {
     margin-left: 70%;
 }
 
 .footer-menu .fb-icon {
-    font-size: 35px;
     width: fit-content;
     margin-right: 70%;
     margin-left: auto;
@@ -384,46 +391,120 @@ footer {
 
 /* Copyright Section */
 .copyright {
-    font-size: 14px;
+    font-size: 15px;
     text-align: center;
     margin-top: 15px;
-    color: #fff;
+    color: #000;
 }
 
 .copyright .fa-copyright {
     color: #4D2C6D;
     font-weight: 600;
+    font-size: 14px;
 }
 
 
 /* -------------------------------------- 
              ---- CONTACT PAGE ----
    -------------------------------------- */
-.contact .contact-wrapper div {
+.skip-links-contact {
+    border-top: 1.5px solid #5F2B22;
+}
+.contact .contact-wrapper {
     display: grid;
-    grid-template-columns: 20%, 80%;
+    width: fit-content;
+    text-align: center;
+    grid-gap: 15px;
+    margin: 40px auto 0 auto;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.contact-info .fa {
+    font-size: 30px;
+    color: #4D2C6D;
+}
+
+.contact-info .fa-envelope {
+    font-size: 26px;
+}
+
+.contact-text {
+    padding-left: 25px;
+}
+
+.contact-info .link a {
+    color: black;
+}
+
+.contact-flex-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px 0 0 0;
+    text-decoration: none;
+}
+
+.contact-flex-wrapper a {
+    color: black;
+}
+
+.contact-flex-wrapper .address {
+    margin-bottom: 25px;
+}
+
+.delivery-info .delivery-text:not(:nth-child(3)) {
+    margin-bottom: 15px;
 }
 
 
 /****************************
         Mid Size Design 
 *****************************/
-@media screen and (min-width: 470px) {
-    .menu-wrapper {
-        padding-bottom: 150px;
+@media screen and (min-width: 768px) {
+
+    /* ----------Hamburger Menu---------------- */
+
+    /* Add hover and active effects */
+    .nav-ul .nav-li a:hover {
+        transform: translateY(-5px);
+    }
+    
+    .menu-item button:hover {
+        border-radius: 15px;
     }
 
-    /* span width
-.line 400px 
+    .menu .main-menu-button-wrapper .main-menu-button:hover {
+        border-radius: 15px;
+    }
 
-p 22px*/
+    .skip-links-section .skip-link .link a:hover,
+    .skip-links-section .skip-link .link a:focus {
+        text-decoration: underline;
+        text-underline-offset: 5px;
+    }
 
 
+    /* ---------- Footer ---------------- */
+    .footer-menu .footer-first-section {
+        margin-left: 45%;
+    }
+    
+    .footer-menu .footer-second-section {
+        margin-right: 45%;
+    }
 
-
-
-
-
+    .footer-menu .ig-icon {
+        margin-left: 80%;
+    }
+    
+    .footer-menu .fb-icon {
+        margin-right: 80%;
+    }
 
 
 }
@@ -434,17 +515,205 @@ p 22px*/
 /****************************
       Large Size Design 
 *****************************/
-@media screen and (min-width: 800px) {
-    .menu-wrapper {
-        grid-template-columns: repeat(3, 1fr);
+/* @media screen and (min-width: 992px) */
+@media screen and (min-width: 992px) {
+
+    /* Text sizes for large screen */
+    h1 {
+        font-size: 40px;
+        text-align: center;
+        margin: 70px auto 10px auto;
+    }
+    
+    .line {
+        width: 350px;
+        margin: 0 auto 20px auto;
+    }
+    
+    p {
+        font-size: 25px;
+    }
+
+    /* logo and nav layout for large screen */
+    .logo-wrapper-mobile {
+        display: none;
+    }
+
+    .logo {
+        width: 110px;
+        margin: 5px 0 5px 40px;
+    }
+
+    .logo-wrapper {
+        display: block;
+        flex-basis: 30%;
+    }
+
+    .hamburger {
+        display: none;
+    }
+
+    .nav {
+        margin: 0 40px 0 auto;
     }
 
     .nav-ul {
-        top: 400px;
+        display: inline-flex;
+        position: relative;
+        top: 0;
+        flex-direction: row;
+        background-color: #C9ACA7;
+        color: #000;
+        padding: 10px 0 10px 0;
+        
+        
+    }
+
+    .nav-ul .nav-li a {
+        color: #000;
+    }
+
+    .nav-ul .nav-li:nth-child(2) {
+        margin: 0 20px;
+    }
+
+
+    /* Menu Grid */
+    .menu-text {
+        font-size: 20px;
+    }
+
+    .menu-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 18px 18px;
+        padding: 0 8% 40px 8%;
+    }
+    
+    
+    .menu-item .name-price-wrapper .item-name {
+        height: 40px;
+    }
+    
+    .menu-item .name-price-wrapper {
+        padding: 8px 13px 8px 13px;
+    }
+
+    /* "View All" Button */
+    .menu .main-menu-button-wrapper .main-menu-button {
+        padding: 10px 35px;
+    }
+
+
+    /* ----------Art of Coffee Section------------- */
+
+    /* section layout for large screen */
+    .art-of-coffee-flex {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 55px 0;
+        background-color: rgb(201, 172, 167, .7);
+    }
+
+    .img-two {
+        order: 1;
+        max-width: 100%;
+        max-height: 100%;
+        margin-top: 0;
+        padding-right: 55px;
+    }
+
+    
+    .lorem {
+        text-align: left;
+    }
+
+    .art-of-coffee-flex .lorem {
+        padding: 0px 45px 0 55px;
+        margin: auto 0;
+
+    }
+
+    .art-of-coffee-flex .lorem p:first-child {
+        margin-bottom: 18px;
+    }
+
+
+    /* ----------Our Coffee Beans Section------------- */
+
+    /* section layout for large screen */
+    .coffee-beans .coffee-beans-card .beans-one,
+    .coffee-beans .coffee-beans-card .beans-three {
+        display: inline;
+    }
+
+    .coffee-beans-card {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 18px 18px;
+        padding: 0 8% 40px 8%;
+    }
+
+    .coffee-beans-card .arrow {
+        display: none;
+    }
+
+
+    .coffee-beans .coffee-beans-card .beans-two {
+        display: inline;
+        margin: 0 0;
+    }
+
+    .coffee-beans-card .menu-item .name-price-wrapper {
+        display: block;
+    }
+
+    .coffee-beans-card .menu-item .name-price-wrapper .item-price {
+        text-align: left;
+    }
+
+
+}
+
+
+
+/****************************
+      Extra-Large Size Design 
+*****************************/
+@media screen and (min-width: 1318px) {
+    .menu-wrapper {
+        /* background-color: #C9ACA7; */
+    }
+
+    .menu-item .name-price-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .menu-item .name-price-wrapper .item-price {
+        margin: 0 0 0 auto;
     }
 
 
 
+    /* "View All" Button */
+    .menu .main-menu-button-wrapper .main-menu-button {
+        padding: 15px 35px;
+    }
+
+    /* Our Coffee Beans Section */
+    .coffee-beans-card .menu-item .name-price-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
 
 
+
+    .img-two {
+        padding-right: 100px;
+    }
+
+    .art-of-coffee-flex .lorem {
+        padding: 0 100px;
+
+    }
 }
